// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wordBreakInside renders 0 1`] = `
Array [
  .c0 {
  word-break-inside: 0;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-inside: 0;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-inside: 0;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-inside: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`wordBreakInside renders function 1`] = `
Array [
  .c0 {
  word-break-inside: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-inside: has;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-inside: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-inside: has;
}

<div
    className="c0"
  />,
]
`;

exports[`wordBreakInside renders invalid theme path 1`] = `
Array [
  .c0 {
  word-break-inside: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-inside: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-inside: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-inside: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`wordBreakInside renders negative number 1`] = `
Array [
  .c0 {
  word-break-inside: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-inside: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-inside: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-inside: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`wordBreakInside renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    word-break-inside: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-break-inside: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-break-inside: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    word-break-inside: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    word-break-inside: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-break-inside: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-break-inside: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    word-break-inside: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    word-break-inside: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-break-inside: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-break-inside: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    word-break-inside: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    word-break-inside: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-break-inside: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-break-inside: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    word-break-inside: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`wordBreakInside renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    word-break-inside: July;
  }
}

@media April {
  .c0 {
    word-break-inside: August;
  }
}

@media January {
  .c0 {
    word-break-inside: September;
  }
}

@media April {
  .c0 {
    word-break-inside: November;
  }
}

@media June {
  .c0 {
    word-break-inside: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    word-break-inside: July;
  }
}

@media April {
  .c0 {
    word-break-inside: August;
  }
}

@media January {
  .c0 {
    word-break-inside: September;
  }
}

@media April {
  .c0 {
    word-break-inside: November;
  }
}

@media June {
  .c0 {
    word-break-inside: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    word-break-inside: January;
  }
}

@media April {
  .c0 {
    word-break-inside: December;
  }
}

@media January {
  .c0 {
    word-break-inside: April;
  }
}

@media April {
  .c0 {
    word-break-inside: May;
  }
}

@media June {
  .c0 {
    word-break-inside: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    word-break-inside: January;
  }
}

@media April {
  .c0 {
    word-break-inside: December;
  }
}

@media January {
  .c0 {
    word-break-inside: April;
  }
}

@media April {
  .c0 {
    word-break-inside: May;
  }
}

@media June {
  .c0 {
    word-break-inside: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`wordBreakInside renders postitive number 1`] = `
Array [
  .c0 {
  word-break-inside: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-inside: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-inside: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-inside: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`wordBreakInside renders string 1`] = `
Array [
  .c0 {
  word-break-inside: July;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-inside: July;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-inside: June;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-inside: June;
}

<div
    className="c0"
  />,
]
`;

exports[`wordBreakInside renders valid theme path 1`] = `
Array [
  .c0 {
  word-break-inside: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-inside: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-inside: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-inside: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
